added password and check lessons
