# api/handler/student.go
@@ -12,10 +12,11 @@ import (
 	"github.com/google/uuid"
 )
 
+// @Security ApiKeyAuth
 // @Router		/student [post]
 // @Summary		Creates a student
 // @Description	This api creates a student and returns its id
-// @Tags		student
+// @Tags		Student
 // @Accept		json
 // @Produce		json
 // @Param		student body models.Student true "student"
@@ -27,32 +28,33 @@ func (h Handler) CreateStudent(c *gin.Context) {
 	student := models.Student{}
 
 	if err := c.ShouldBindJSON(&student); err != nil {
-		handleResponse(c, "error while reading request body", http.StatusBadRequest, err.Error())
+		handleResponse(c, h.Log, "error while reading request body", http.StatusBadRequest, err.Error())
 		return
 	}
 	if err := check.ValidateAge(student.Age); err != nil {
-		handleResponse(c, "error while validating student age, year: "+strconv.Itoa(student.Age), http.StatusBadRequest, err.Error())
+		handleResponse(c, h.Log, "error while validating student age, year: "+strconv.Itoa(student.Age), http.StatusBadRequest, err.Error())
 		return
 	}
 
 	if err := check.ValidateNumber(student.Phone); err != nil {
-		handleResponse(c, "error while validating student phone: "+student.Phone, http.StatusBadRequest, err.Error())
+		handleResponse(c, h.Log, "error while validating student phone: "+student.Phone, http.StatusBadRequest, err.Error())
 		return
 	}
 
-	id, err := h.Service.Student().Create(c.Request.Context(),student)
+	id, err := h.Service.Student().Create(c.Request.Context(), student)
 	if err != nil {
-		handleResponse(c, "error while creating student", http.StatusBadRequest, err.Error())
+		handleResponse(c, h.Log, "error while creating student", http.StatusBadRequest, err.Error())
 		return
 	}
 
-	handleResponse(c, "Created successfully", http.StatusOK, id)
+	handleResponse(c, h.Log, "Created successfully", http.StatusOK, id)
 }
 
-// @Router		/student/updatestudent/{id} [put]
+// @Security ApiKeyAuth
+// @Router		/student/updatestudent/{id} [PUT]
 // @Summary		Update a student
 // @Description	This API updates a student
-// @Tags		student
+// @Tags		Student
 // @Accept		json
 // @Produce		json
 // @Param		id path string true "Student ID"
@@ -68,25 +70,26 @@ func (h Handler) UpdateStudent(c *gin.Context) {
 	student := models.Student{}
 
 	if err := c.ShouldBindJSON(&student); err != nil {
-		handleResponse(c, "error while reading request body", http.StatusBadRequest, err.Error())
+		handleResponse(c, h.Log, "error while reading request body", http.StatusBadRequest, err.Error())
 		return
 	}
 
 	student.Id = id
 
-	id, err := h.Service.Student().UpdateStudent(c.Request.Context(),student)
+	id, err := h.Service.Student().UpdateStudent(c.Request.Context(), student)
 	if err != nil {
-		handleResponse(c, "error while updating student", http.StatusInternalServerError, err.Error())
+		handleResponse(c, h.Log, "error while updating student", http.StatusInternalServerError, err.Error())
 		return
 	}
 
-	handleResponse(c, "Updated successfully", http.StatusOK, id)
+	handleResponse(c, h.Log, "Updated successfully", http.StatusOK, id)
 }
 
+// @Security ApiKeyAuth
 // @Router		/student [get]
 // @Summary		Get a student
 // @Description	This API returns all students
-// @Tags		student
+// @Tags		Student
 // @Produce		json
 // @Success		200  {object}  models.Response
 // @Failure		400  {object}  models.Response
@@ -97,59 +100,32 @@ func (h Handler) GetAllStudents(c *gin.Context) {
 
 	page, err := ParsePageQueryParam(c)
 	if err != nil {
-		handleResponse(c, "error while parsing page", http.StatusBadRequest, err.Error())
+		handleResponse(c, h.Log, "error while parsing page", http.StatusBadRequest, err.Error())
 		return
 	}
 	limit, err := ParseLimitQueryParam(c)
 	if err != nil {
-		handleResponse(c, "error while parsing limit", http.StatusBadRequest, err.Error())
+		handleResponse(c, h.Log, "error while parsing limit", http.StatusBadRequest, err.Error())
 		return
 	}
 
-	resp, err := h.Service.Student().GetAllStudent(c.Request.Context(),models.GetAllStudentsRequest{
+	resp, err := h.Service.Student().GetAllStudent(c.Request.Context(), models.GetAllStudentsRequest{
 		Search: search,
 		Page:   page,
 		Limit:  limit,
 	})
 	if err != nil {
-		handleResponse(c, "error while getting all students", http.StatusInternalServerError, err.Error())
+		handleResponse(c, h.Log, "error while getting all students", http.StatusInternalServerError, err.Error())
 		return
 	}
-	handleResponse(c, "Select all successful", http.StatusOK, resp)
+	handleResponse(c, h.Log, "Select all successful", http.StatusOK, resp)
 }
 
-// @Router		/student/updatepassword/{id}/{password} [put]
-// @Summary		Update a student's password
-// @Description	This API endpoint updates a student's password by their ID.
-// @Tags			student
-// @Produce		json
-// @Param			id path string true "Student ID"
-// @Param			password path string true "New Password"
-// @Success		200 {object} models.Response "Password updated successfully"
-// @Failure		400 {object} models.Response "Bad Request"
-// @Failure		404 {object} models.Response "Not Found"
-// @Failure		500 {object} models.Response "Internal Server Error"
-func (h Handler) UpdateStudentPassword(c *gin.Context) {
-	id := c.Param("id")
-	password := c.Param("password")
-	if err := uuid.Validate(id); err != nil {
-		handleResponse(c, "Error while validating student ID", http.StatusBadRequest, err.Error())
-		return
-	}
-
-	id, err := h.Service.Student().UpdatePassword(c.Request.Context(),id,password)
-	if err != nil {
-		handleResponse(c, "Error while updating student password", http.StatusInternalServerError, err.Error())
-		return
-	}
-
-	handleResponse(c, "Password updated successfully", http.StatusOK, id)
-}
-
+// @Security ApiKeyAuth
 // @Router		/student/{id} [get]
 // @Summary		Get by id a student
 // @Description	This API get by id a student
-// @Tags		student
+// @Tags		Student
 // @Produce		json
 // @Param		id path string true "Student Id"
 // @Success		200 {object} models.Response
@@ -159,19 +135,20 @@ func (h Handler) UpdateStudentPassword(c *gin.Context) {
 func (h Handler) GetById(c *gin.Context) {
 	id := c.Param("id")
 
-	data, err := h.Service.Student().GetByIdStudent(c.Request.Context(),id)
+	data, err := h.Service.Student().GetByIdStudent(c.Request.Context(), id)
 	if err != nil {
-		handleResponse(c, fmt.Sprintf("error while get by id student %s", id), http.StatusInternalServerError, err.Error())
+		handleResponse(c, h.Log, fmt.Sprintf("error while get by id student %s", id), http.StatusInternalServerError, err.Error())
 		return
 	}
 
-	handleResponse(c, "Select by id successful", http.StatusOK, data)
+	handleResponse(c, h.Log, "Select by id successful", http.StatusOK, data)
 }
 
+// @Security ApiKeyAuth
 // @Router		/student/deletstudent/{id} [delete]
 // @Summary		Delete a student
 // @Description	This API delete a student
-// @Tags		student
+// @Tags		Student
 // @Produce		json
 // @Param		id path string true "Student ID"
 // @Success		200 {object} models.Response
@@ -180,21 +157,22 @@ func (h Handler) GetById(c *gin.Context) {
 // @Failure		500 {object} models.Response
 func (h Handler) DeleteStudent(c *gin.Context) {
 
-	Id:= c.Param("id")
+	Id := c.Param("id")
 
-	err := h.Service.Student().DeleteStudent(c.Request.Context(),Id)
+	err := h.Service.Student().DeleteStudent(c.Request.Context(), Id)
 	if err != nil {
-		handleResponse(c, "error while deleting  student", http.StatusInternalServerError, err.Error())
+		handleResponse(c, h.Log, "error while deleting  student", http.StatusInternalServerError, err.Error())
 		return
 	}
 
-	handleResponse(c, "Student deleted successfully", http.StatusOK, err)
+	handleResponse(c, h.Log, "Student deleted successfully", http.StatusOK, err)
 }
 
+// @Security ApiKeyAuth
 // @Router		/student/status/{id} [get]
 // @Summary		Check the status of a student
 // @Description	This API endpoint checks the status of a student by their ID.
-// @Tags			student
+// @Tags		Student
 // @Param			id path string true "Student ID"
 // @Produce		json
 // @Success		200 {object} models.Response "Status checked successfully"
@@ -204,16 +182,44 @@ func (h Handler) DeleteStudent(c *gin.Context) {
 func (h Handler) StudentStatus(c *gin.Context) {
 	id := c.Param("id")
 	if err := uuid.Validate(id); err != nil {
-		handleResponse(c, fmt.Sprintf("Error while validating ID %s", id), http.StatusBadRequest, err.Error())
+		handleResponse(c, h.Log, fmt.Sprintf("Error while validating ID %s", id), http.StatusBadRequest, err.Error())
 		fmt.Println(id)
 		return
 	}
 
-	boolean, err := h.Store.StudentStorage().StatusSt(c.Request.Context(),id)
+	boolean, err := h.Service.Student().StatusStudent(c.Request.Context(), id)
 	if err != nil {
-		handleResponse(c, "Error while checking student status", http.StatusInternalServerError, err.Error())
+		handleResponse(c, h.Log, "Error while checking student status", http.StatusInternalServerError, err.Error())
 		return
 	}
 
-	handleResponse(c, "Status checked successfully", http.StatusOK, boolean)
+	handleResponse(c, h.Log, "Status checked successfully", http.StatusOK, boolean)
+}
+
+// @Security ApiKeyAuth
+// @Router		/student/lesson/{id} [get]
+// @Summary		Check the lesson of a student
+// @Description	This API endpoint checks the lesson of a student by their ID.
+// @Tags		Student
+// @Param		id path string true "Student ID"
+// @Produce		json
+// @Success		200 {object} models.Response "Status checked successfully"
+// @Failure		400 {object} models.Response "Bad Request"
+// @Failure		404 {object} models.Response "Not Found"
+// @Failure		500 {object} models.Response "Internal Server Error"
+func (h Handler) StudentLesson(c *gin.Context) {
+	id := c.Param("id")
+	if err := uuid.Validate(id); err != nil {
+		handleResponse(c, h.Log, fmt.Sprintf("Error while validating ID %s", id), http.StatusBadRequest, err.Error())
+		fmt.Println(id)
+		return
+	}
+
+	lesson, err := h.Service.Student().LessonStudent(c.Request.Context(), id)
+	if err != nil {
+		handleResponse(c, h.Log, "Error while checking student lesson", http.StatusInternalServerError, err.Error())
+		return
+	}
+
+	handleResponse(c, h.Log, "Lesson checked successfully", http.StatusOK, lesson)
 }
