# api/router.go
@@ -2,8 +2,9 @@ package api
 
 import (
 	"backend_course/lms/api/handler"
+	"backend_course/lms/pkg/logger"
 	"backend_course/lms/service"
-	"backend_course/lms/storage"
+	"net/http"
 
 	"github.com/gin-gonic/gin"
 
@@ -15,35 +16,48 @@ import (
 // @title           Swagger Example API
 // @version         1.0
 // @description     This is a sample server celler server.
-func New(store storage.IStorage,service service.IServiceManager) *gin.Engine {
-	h := handler.NewStrg(store,service)
+// @securityDefinitions.apikey ApiKeyAuth
+// @in header
+// @name Authorization
+func New(service service.IServiceManager, log logger.ILogger) *gin.Engine {
+	h := handler.NewStrg(service, log)
 
 	r := gin.Default()
+	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+
+	r.Use(authMiddleware)
 
 	r.POST("/student", h.CreateStudent)
 	r.GET("/student", h.GetAllStudents)
 	r.GET("/student/:id", h.GetById)
 	r.PUT("/student/updatestudent/:id", h.UpdateStudent)
-	r.PUT("/student/updatepassword/:id/:password", h.UpdateStudentPassword)
 	r.DELETE("/student/deletstudent/:id", h.DeleteStudent)
 	r.GET("/student/status/:id", h.StudentStatus)
+	r.GET("student/lesson/:id",h.StudentLesson)
 
 	r.POST("/teacher", h.CreateTeacher)
 	r.PUT("/teacher/updateteacher/:id", h.UpdateTeacher)
 	r.GET("/teacher", h.GetAllTeacher)
 	r.GET("/teacher/:id", h.GetByIdTeacher)
-	r.DELETE("/teacher/deleteteacher/:id",h.DeleteTeacher)
+	r.DELETE("/teacher/deleteteacher/:id", h.DeleteTeacher)
+	r.GET("/teacher/lesson/:id",h.TeacherLesson)
 
-	r.POST("/subject",h.CreateSubject)
+	r.POST("/subject", h.CreateSubject)
 	r.GET("/subject/:id", h.GetbyIdSubject)
-	r.PUT("/subject/updatesubject/:id",h.UpdateSubject)
-	r.DELETE("/subject/deletsubject/:id",h.DeleteSubject)
+	r.PUT("/subject/updatesubject/:id", h.UpdateSubject)
+	r.DELETE("/subject/deletsubject/:id", h.DeleteSubject)
 	r.GET("/subject", h.GetAllSubject)
 
-	r.POST("/timetable",h.CreateTimeTable)
-	r.DELETE("/timetable/:id",h.DeleteTimeTable)
-
-	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+	r.POST("/timetable", h.CreateTimeTable)
+	r.DELETE("/timetable/:id", h.DeleteTimeTable)
 
 	return r
+}
+
+func authMiddleware(c *gin.Context) {
+	if c.GetHeader("Authorization") != "secret" {
+		c.AbortWithStatusJSON(http.StatusUnauthorized, gin.H{"error": "unauthorized"})
+		return
+	}
+	c.Next()
 }
